Desligados botão de - e de limpar quando se deve. Corrigido bug com overflow horizontal na listagem de pedidos.

--- a/site/pf2/f1.css
+++ b/site/pf2/f1.css
@@ -55,7 +55,7 @@
 }
 
 .lista_pedidos_tres_pontos {
-	width: 13vw;
+	width: 100%;
 	overflow: hidden;
 	display: inline-block;
 	text-overflow: ellipsis;
@@ -144,6 +144,15 @@
 
 .btn-link{
 	border-color: #337ab7;
+}
+
+.btn-link[disabled] {
+	border-color: gray !important;
+	color: gray !important;
+}
+
+.btn-link:hover, .btn-link:focus, .btn-link:active, .btn-link.active, .open>.dropdown-toggle.btn-link, .btn-link:active:focus {
+	border-color: #204d74 !important;
 }
 
 #tipo_sopas {
